# simple_object_tracker

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
include/simple_object_tracker/: association_heuristics.hpp  extended_kalman_filter.hpp  hungarian_algorithm.hpp  tracked_object.hpp  tracker.h
msg/: Object.msg  ObjectList.msg
src/: tracker.cpp  tracker_main.cpp
test/: clang_output_final.txt  clang_output_initial.txt  hungarian_fuzzer.cpp  test_tracker.cpp
