<?xml version="1.0"?>
<package format="2">
  <name>simple_object_tracker</name>
  <version>0.0.1</version>
  <description>The simple object tracking package</description>

  <maintainer email="anuradha_chopra@alumni.sutd.edu.sg">Anuradha Chopra</maintainer>
  
  <license>MIT License</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslint</build_depend>
  <depend>roscpp</depend>
  <depend>roslaunch</depend>
  <depend>rospy</depend>
  <depend>message_generation</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>message_runtime</depend>
  <depend>tf</depend>
  <depend>pcl_ros</depend>

  <export></export>
</package>
